Updated background and font
Changelog:
>Added new custom-made kanayunan background
>Changed previous 'Arial' font to 'Press Start 2P'
>Added new character icons for character select

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@drawable/temproad">
+    android:background="@drawable/background">
 
     <com.mobdeve.project.sibat.GameView
         android:id="@+id/gameView"
@@ -25,10 +25,11 @@
         android:id="@+id/ChooseScreen_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Choose your Character"
+        android:fontFamily="@font/custom"
+        android:text="CHOOSE YOUR CHARACTER"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,22 +41,25 @@
         android:id="@+id/chara2_ib"
         android:layout_width="74dp"
         android:layout_height="74dp"
+        android:backgroundTint="#00FFFFFF"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/gameView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/chara1_ib"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.159"
-        app:srcCompat="@drawable/bird1"
+        app:srcCompat="@drawable/lumadicon"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/pause_tv"
+        android:fontFamily="@font/custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="PAUSED"
         android:textColor="#FFFFFF"
-        android:textSize="50sp"
+        android:textSize="35sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -142,10 +146,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
+        android:fontFamily="@font/custom"
         android:text="PUT YOUR FINGER ON THE CHARACTER TO START PLAYING"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,13 +160,15 @@
         android:id="@+id/chara1_ib"
         android:layout_width="74dp"
         android:layout_height="74dp"
+        android:backgroundTint="#00FFFFFF"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/gameView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintEnd_toStartOf="@+id/chara2_ib"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16000003"
-        app:srcCompat="@drawable/tempchar"
+        app:layout_constraintVertical_bias="0.158"
+        app:srcCompat="@drawable/farmericon"
         tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
