--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,13 +10,13 @@
 
     <ImageView
         android:id="@+id/logo_iv"
-        android:layout_width="206dp"
-        android:layout_height="173dp"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/go" />
+        app:srcCompat="@drawable/sibat_logo" />
 
     <Button
         android:id="@+id/playBtn"
